--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+*~
+*.swp
+npm-debug.log
+node_modules
+/core
+.eslintcache
+.npmrc
+.yarn-error.log
+.nyc_output
+!.github/
+/coverage
+/build
+.netlify
+.env*
 node_modules/
 .cache/
 public
