removed appname from connection string in netlify.toml to see if this solves the issue in production

--- a/netlify.toml
+++ b/netlify.toml
@@ -39,7 +39,7 @@
   publish = "dist"
 
 [template.environment]
-  MONGODB_URI = "mongodb+srv://garretdepass:h8eBhzYtIf5cOogp@cluster0.gtgwvgx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+  MONGODB_URI = "mongodb+srv://garretdepass:h8eBhzYtIf5cOogp@cluster0.gtgwvgx.mongodb.net/?retryWrites=true&w=majority"
   MONGODB_DATABASE = "tasks_netlify"
   MONGODB_COLLECTION = "tasks"
 
