--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "netlify-template-mongodb-atlas",
   "version": "1.0.0",
   "description": "A Netlify template for MongoDB Atlas integration",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "test": "vitest"
   },
   "dependencies": {
+    "@testing-library/react": "^16.3.0",
     "dotenv": "^16.5.0",
     "mongodb": "^6.3.0",
     "netlify-cli": "^3.0.0",
@@ -30,6 +33,10 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^13.6.4"
+    "@testing-library/react": "^14.1.2",
+    "@babel/preset-react": "^7.27.1",
+    "@vitejs/plugin-react": "^4.4.1",
+    "cypress": "^13.6.4",
+    "vitest": "^3.1.3"
   }
 }
