--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/react": "^14.1.2",
     "@vitejs/plugin-react": "^4.4.1",
     "cypress": "^13.6.4",
+    "jest": "^27.5.1",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
   }
